Implemented updated flight search using post method